# lacuna

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
configs/: fsdp2_example.toml  multi_node.toml  pretrain_qwen.toml  pt_qwen.toml  sft_qwen.toml
configs/benchmarks/: 00_baseline.toml  00_fa2.toml  00_fa3.toml  00_sdpa.toml  01_baseline.toml  01_fa2_compile_kernelize.toml  01_kernelize_fa2_compile.toml  01_kernelize_fa3_compile.toml  01_kernelize_sdpa_compile.toml  01_sdpa_compile_kernelize.toml  02_liger_fa2.toml  02_liger_fa3.toml  02_liger_sdpa.toml  03_liger_fa2_compile.toml  03_liger_fa3_compile.toml  03_liger_sdpa_compile.toml  03_sdpa_compile.toml  04_liger_cce_fa2.toml  04_liger_cce_fa3.toml  04_liger_cce_sdpa.toml  04_liger_cce_sdpa_compile.toml  04_sdpa_compile_kernelize.toml  05_kernelize_cce_sdpa_compile.toml  05_liger_cce_fa2_compile.toml  05_liger_cce_fa3_compile.toml  05_liger_cce_sdpa_compile.toml  05_liger_sdpa_compile.toml  06_liger_cce_sdpa_compile.toml  07_liger_cce_fa2.toml  08_liger_cce_fa2_compile.toml  README.md
docs/: README.md  merge.md  misc.md  torch.md  train.md
examples/: qwen3-a3b-h100.toml
merge/: della-linear.yaml  linear.yaml  nearswap.yaml  nuslerp.yaml
scripts/: adapters.py  benchmark.py  chat.py  dcp_to_hf.py  fa3.sh  hf_to_lacuna.py  honey_i_shrunk_the_model.py  if.yaml  install.sh  make_tiny_model.py  serve.py  slurm.sh
src/lacuna/: __init__.py  checkpoint.py  ckpt.py  cli.py  config.py  data.py  distributed.py  eval.py  metrics.py  model.py  moe.py  monitor.py  optim.py  parallelize.py  sched.py  scheduler.py  train.py  trainer.py  utils.py  wandb.py
src/lacuna/modeling/: qwen3_moe_clean.py  qwen3_moe_fast.py  qwen3_moe_prime.py  qwen3_moe_tt.py
src/lacuna/models/: __init__.py  auto_model.py  qwen3.py  qwen3_moe.py
src/lacuna/scripts/: adapters.py  fuse.py
src/lacuna/tui/: _config.py  _confirm.py  _curves.py  _data.py  _hud.py  _i_o.py  _logs.py  _menu.py  _redline.py  _splash.py  app.py  utils.py
templates/: qwen.jinja
tests/: test.jinja  test_checkpointing.py  test_collator.py  test_data.py  test_datasets.py  test_lacuna_layer.py  test_sampler.py  test_tokenizer.py
ui/: _curves.py  _data.py  _i_o.py  _redline.py  _splash.py  app.py
