[project]
name = "lacuna"
version = "0.1.0"
description = "pretrain and finetune hf models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.8.0",
    "datasets>=4.0.0",
    "torchdata>=0.11.0",
    "liger-kernel>=0.6.2",
    "transformers>=4.56.1",
    "kernels>=0.10.0",
    "pydantic-settings>=2.10.1",
    "wandb>=0.21.2",
    "loguru>=0.7.3",
    "rich>=14.1.0",
    "psutil>=7.0.0",
    "s3fs>=2025.3.0",
    "textual>=6.1.0",
    "nvidia-ml-py>=13.580.82",
]

[project.scripts]
train = "lacuna.cli:lacuna"
lacuna = "lacuna.tui.app:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--color=yes",
    "--tb=short",
    "--disable-warnings",
    "-ra",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
