[project]
name = "lacuna"
version = "0.1.0"
description = "autodidactic genesis"
readme = "README.md"
authors = [
    { name = "k", email = "keaton@camfer.dev" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "dion",
    "torch",
    "torchtitan",
    "modal>=1.2.0",
    "ruff>=0.14.0",
    "pytest>=8.4.2",
    "loguru>=0.7.3",
    "wandb>=0.22.2",
    "s3fs>=2025.9.0",
    "tomli-w>=1.2.0",
    "torchao>=0.14.0",
    "kernels>=0.10.4",
    "verifiers>=0.1.5",
    "pre-commit>=4.3.0",
    "liger-kernel>=0.6.2",
    "pydantic-settings>=2.11.0",
    "transformers[serving]>=4.57.0",
]

[project.scripts]
chat = "lacuna:chat"
merge = "lacuna:merge"
train = "lacuna:train"
sweep = "lacuna:sweep"
slurm = "lacuna:slurm"
serve = "lacuna:serve"
fuse = "lacuna.scripts.fuse:main"
adapters = "lacuna.scripts.adapters:main"

[build-system]
requires = ["uv_build>=0.9.1,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.uv.sources]
torch = [{ index = "pytorch", marker = "sys_platform != 'darwin'"}]
dion = [{ git = "https://github.com/microsoft/dion.git", rev = "0360f9b" }]
torchtitan = { git = "https://github.com/pytorch/torchtitan", rev = "92ed8b3" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--color=yes",
    "--tb=short",
    "--disable-warnings",
    "-ra",
    "--strict-markers"
]
markers = [
    "gpu: marks tests that require a CUDA device (deselect with '-m \"not gpu\"')",
]
